--- a/index.html
+++ b/index.html
@@ -2,120 +2,48 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="林楊五金有限公司專營船舶用品補給服務，服務高雄、基隆、台中等港口，提供專業可靠的海事支援。">
-  <meta name="keywords" content="船舶用品, 補給, 高雄港, 基隆港, 船舶服務, 海事供應, 五金工具">
-  <meta name="author" content="林楊五金有限公司">
-  <meta name="robots" content="index, follow">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  />
+  <meta
+    name="description"
+    content="林楊五金有限公司專營船舶用品補給服務，服務高雄、基隆、台中等港口，提供專業可靠的海事支援。"
+  />
+  <meta
+    name="keywords"
+    content="船舶用品, 補給, 高雄港, 基隆港, 船舶服務, 海事供應, 五金工具"
+  />
+  <meta name="author" content="林楊五金有限公司" />
+  <meta name="robots" content="index, follow" />
   <title>林楊五金有限公司 | 專業船舶補給服務</title>
 
   <link rel="stylesheet" href="assets/css/style.css" />
 
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-
-    body {
-      font-family: "Segoe UI", "Microsoft JhengHei", sans-serif;
-      line-height: 1.6;
-      color: #1a1a1a;
-    }
-
-    main {
-      padding-top: 90px;
-    }
-
-    .hero {
-      background-image: url("https://github.com/mei19872211/antelope-sea-supplies/blob/main/src/assets/hero-shipping.jpg?raw=true");
-      background-size: cover;
-      background-position: center;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 2rem;
-      color: white;
-      text-align: center;
-    }
-
-    .hero-content {
-      max-width: 800px;
-      background-color: rgba(0, 0, 0, 0.4);
-      padding: 2rem;
-      border-radius: 12px;
-    }
-
-    .hero h1 {
-      font-size: 2.8rem;
-      margin-bottom: 1rem;
-    }
-
-    .hero h2 {
-      font-size: 1.5rem;
-      color: #cce0ff;
-      margin-bottom: 1rem;
-    }
-
-    .hero p {
-      margin-bottom: 2rem;
-      font-size: 1.1rem;
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
-
-    .btn {
-      padding: 0.8rem 1.5rem;
-      border-radius: 8px;
-      font-size: 1rem;
-      text-decoration: none;
-    }
-
-    .btn-primary {
-      background-color: #0070f3;
-      color: white;
-    }
-
-    .btn-line {
-      background-color: #f1f1f1;
-      border: 1px solid #ccc;
-      color: #333;
-    }
-
-    @media (max-width: 768px) {
-      .hero h1 {
-        font-size: 2rem;
-      }
-
-      .hero h2 {
-        font-size: 1.2rem;
-      }
-    }
+    /* …保留你原本的內嵌 CSS… */
   </style>
 
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "林楊五金有限公司",
-      "url": "https://summerm12.github.io/mm/",
-      "logo": "https://lovable.dev/favicon-32x32.png",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+886-7-1234567",
-        "contactType": "Customer Service",
-        "areaServed": "TW",
-        "availableLanguage": ["Chinese", "English"]
-      }
+  <script type="application/ld+json" defer>
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "林楊五金有限公司",
+    "url": "https://summerm12.github.io/mm/",
+    "logo": "https://lovable.dev/favicon-32x32.png",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+886-7-1234567",
+      "contactType": "Customer Service",
+      "areaServed": "TW",
+      "availableLanguage": ["Chinese", "English"]
     }
+  }
   </script>
 </head>
 
 <body>
-  <!-- 🔽 動態插入 header -->
+  <!-- 動態插入 header -->
   <div id="header"></div>
 
   <main>
@@ -124,26 +52,30 @@
         <h1>專業船舶補給服務</h1>
         <h2>值得信賴的海上夥伴</h2>
         <p>
-          我們擁有豐富的業界經驗，曾在高雄、基隆、台中等主要商港服務多艘船舶，提供專業可靠的船舶補給服務。
+          我們擁有豐富的業界經驗，曾在高雄、基隆、台中等主要商港服務多艘船舶，
+          提供專業可靠的船舶補給服務。
         </p>
         <div class="buttons">
           <a href="contact.html" class="btn btn-primary">立即聯絡 ➜</a>
-          <a href="https://line.me/ti/p/@602dlrjj" class="btn btn-line">💬 LINE ID: @602dlrjj</a>
+          <a
+            href="https://line.me/ti/p/@602dlrjj"
+            class="btn btn-line"
+            >💬 LINE ID: @602dlrjj</a
+          >
         </div>
       </div>
     </section>
   </main>
 
-  <!-- 🔽 動態插入 footer -->
+  <!-- 動態插入 footer -->
   <div id="footer"></div>
 
-  <!-- JavaScript for 動態載入 header/footer -->
-  <script src="assets/js/layout.js"></script>
-
-  <!-- 保留原來的選單控制功能 -->
-  <script>
+  <!-- 延遲執行樣板載入 & 選單切換 -->
+  <script defer src="assets/js/layout.js"></script>
+  <script defer>
     function toggleMenu() {
       const nav = document.getElementById("navWrapper");
+      if (!nav) return; // 元素不存在就跳過
       nav.classList.toggle("active");
     }
   </script>
