--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <meta name="robots" content="index, follow">
   <title>林楊五金有限公司 | 專業船舶補給服務</title>
 
-  <link rel="stylesheet" href="assets/css/style.css" />
-
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -20,8 +18,57 @@
       color: #1a1a1a;
     }
 
-    main {
-      padding-top: 90px;
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      z-index: 1000;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-weight: bold;
+    }
+
+    .logo img {
+      width: 32px;
+      height: 32px;
+    }
+
+    .nav-wrapper {
+      display: flex;
+      gap: 2rem;
+    }
+
+    .nav a {
+      text-decoration: none;
+      color: #333;
+      font-weight: 500;
+    }
+
+    .lang-btn {
+      border: 1px solid #ccc;
+      padding: 0.4rem 0.8rem;
+      border-radius: 8px;
+      background-color: #f9f9f9;
+      cursor: pointer;
+    }
+
+    .hamburger {
+      display: none;
+      font-size: 1.8rem;
+      background: none;
+      border: none;
+      cursor: pointer;
     }
 
     .hero {
@@ -85,7 +132,39 @@
       color: #333;
     }
 
+    main {
+      padding-top: 90px;
+    }
+
     @media (max-width: 768px) {
+      header {
+        flex-wrap: wrap;
+        padding: 1rem;
+      }
+
+      .nav-wrapper {
+        flex-direction: column;
+        width: 100%;
+        display: none;
+      }
+
+      .nav-wrapper.active {
+        display: flex;
+      }
+
+      .hamburger {
+        display: block;
+      }
+
+      nav.nav {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 1rem 0;
+        width: 100%;
+        text-align: center;
+      }
+
       .hero h1 {
         font-size: 2rem;
       }
@@ -115,8 +194,28 @@
 </head>
 
 <body>
-  <!-- 🔽 動態插入 header -->
-  <div id="header"></div>
+  <header>
+    <div class="logo">
+      <img src="https://lovable.dev/favicon-32x32.png" alt="公司 Logo" />
+      <div>
+        <div>林楊五金有限公司</div>
+        <small style="font-weight: normal;">Antelope Hardware Ltd.</small>
+      </div>
+    </div>
+
+    <button class="hamburger" onclick="toggleMenu()">☰</button>
+
+    <div class="nav-wrapper" id="navWrapper">
+      <nav class="nav">
+        <a href="index.html">首頁</a>
+        <a href="services.html">服務項目</a>
+        <a href="about.html">關於我們</a>
+        <a href="contact.html">聯絡我們</a>
+      </nav>
+    </div>
+
+    <div class="lang-btn">🌐 EN</div>
+  </header>
 
   <main>
     <section class="hero">
@@ -134,13 +233,6 @@
     </section>
   </main>
 
-  <!-- 🔽 動態插入 footer -->
-  <div id="footer"></div>
-
-  <!-- JavaScript for 動態載入 header/footer -->
-  <script src="assets/js/layout.js"></script>
-
-  <!-- 保留原來的選單控制功能 -->
   <script>
     function toggleMenu() {
       const nav = document.getElementById("navWrapper");
