--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
       </div>
 
       <!-- 導覽列與語系切換按鈕 -->
-      <div id="nav-wrapper" class="hidden lg:flex lg:flex-col items-center w-full mt-4">
+      <div id="nav-wrapper" class="hidden lg:flex lg:flex-row items-center justify-center w-full mt-4">
         <nav class="flex flex-col lg:flex-row gap-4 lg:gap-8 justify-center w-full lg:w-auto">
           <a href="index.html" class="text-gray-700 hover:text-blue-600 transition duration-300 py-2 px-4 rounded-lg text-center font-medium" data-zh="首頁" data-en="Home">首頁</a>
           <a href="services.html" class="text-gray-700 hover:text-blue-600 transition duration-300 py-2 px-4 rounded-lg text-center font-medium" data-zh="服務項目" data-en="Services">服務項目</a>
           <a href="about.html" class="text-gray-700 hover:text-blue-600 transition duration-300 py-2 px-4 rounded-lg text-center font-medium" data-zh="關於我們" data-en="About Us">關於我們</a>
           <a href="contact.html" class="text-gray-700 hover:text-blue-600 transition duration-300 py-2 px-4 rounded-lg text-center font-medium" data-zh="聯絡我們" data-en="Contact Us">聯絡我們</a>
         </nav>
-        <button id="lang-btn-desktop" class="bg-gray-100 text-gray-700 py-2 px-4 rounded-lg hover:bg-gray-200 transition duration-300 font-medium whitespace-nowrap mt-4 hidden lg:block">🌐 EN</button>
+        <button id="lang-btn-desktop" class="bg-gray-100 text-gray-700 py-2 px-4 rounded-lg hover:bg-gray-200 transition duration-300 font-medium whitespace-nowrap lg:ml-8">🌐 EN</button>
       </div>
     </header>
 
@@ -96,7 +96,7 @@
       const langBtnDesktop = document.getElementById('lang-btn-desktop');
       const langBtnMobile = document.getElementById('lang-btn-mobile');
       const container = document.querySelector('[data-lang]');
-      const elements = document.querySelectorAll('[data-zh], [data-en]');
+      const elements = document.querySelectorAll('[data-zh], [data-en], footer small');
 
       // 語系切換函式
       function toggleLanguage() {
