--- a/contact.html
+++ b/contact.html
@@ -70,46 +70,36 @@
 
     <main class="pt-48 lg:pt-56 max-w-7xl mx-auto px-4">
       <h2 class="text-3xl md:text-4xl font-bold text-blue-600 mb-4 text-center" data-zh="聯絡我們" data-en="Contact Us">聯絡我們</h2>
-      <p class="text-lg text-gray-700 max-w-3xl mx-auto mb-8 text-center" data-zh="期待與您合作，請填寫以下表單或直接聯繫我們。" data-en="We look forward to collaborating with you. Please fill out the form below or contact us directly.">期待與您合作，請填寫以下表單或直接聯繫我們。</p>
+      <p class="text-lg text-gray-700 max-w-3xl mx-auto mb-8 text-center" data-zh="期待與您合作，請隨時透過以下方式聯繫我們。" data-en="We look forward to collaborating with you. Please feel free to contact us via the following methods.">期待與您合作，請隨時透過以下方式聯繫我們。</p>
 
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12 mt-8">
-        <!-- 左側聯繫資訊 -->
-        <div class="bg-white p-8 rounded-xl shadow-lg border border-gray-200">
-          <div class="space-y-6">
-            <div>
-              <strong class="block font-semibold text-lg text-blue-700" data-zh="統一編號" data-en="Tax ID">統一編號：</strong>
-              <p class="text-gray-700">89156878</p>
-            </div>
-            <div>
-              <strong class="block font-semibold text-lg text-blue-700" data-zh="聯絡電話" data-en="Phone">聯絡電話：</strong>
-              <p class="text-gray-700">0972-138-928</p>
-            </div>
-            <div>
-              <strong class="block font-semibold text-lg text-blue-700" data-zh="電子郵件" data-en="Email">電子郵件：</strong>
-              <p class="text-gray-700">antelopehw@outlook.com</p>
-            </div>
-            <div>
-              <strong class="block font-semibold text-lg text-blue-700" data-zh="官方 LINE" data-en="Official LINE">官方 LINE：</strong>
-              <p class="text-gray-700">@602dlrjj</p>
-              <a class="mt-4 inline-block bg-green-500 text-white font-bold py-2 px-6 rounded-lg hover:bg-green-600 transition duration-300" href="https://line.me/ti/p/@602dlrjj" target="_blank" data-zh="💬 加入我們的 LINE" data-en="💬 Join our LINE">💬 加入我們的 LINE</a>
-            </div>
-            <div>
-              <strong class="block font-semibold text-lg text-blue-700" data-zh="公司地址" data-en="Address">公司地址：</strong>
-              <p class="text-gray-700" data-zh="臺中市清水區吳厝里和睦路三段250號1樓" data-en="1F, No. 250, Sec. 3, Hemu Rd., Wucuo Li, Qingshui Dist., Taichung City">臺中市清水區吳厝里和睦路三段250號1樓</p>
-            </div>
-            <div>
-              <strong class="block font-semibold text-lg text-blue-700" data-zh="辦公時間" data-en="Office Hours">辦公時間：</strong>
-              <p class="text-gray-700" data-zh="週一至週五 09:00-17:00 (GMT+8)" data-en="Mon-Fri 09:00-17:00 (GMT+8)">週一至週五 09:00-17:00 (GMT+8)</p>
-            </div>
+      <!-- 聯絡資訊區塊 (置中排版) -->
+      <div class="bg-white p-8 rounded-xl shadow-lg border border-gray-200 max-w-2xl mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <div>
+            <strong class="block font-semibold text-lg text-blue-700" data-zh="統一編號" data-en="Tax ID">統一編號：</strong>
+            <p class="text-gray-700">89156878</p>
           </div>
-        </div>
-
-        <!-- 右側聯絡表單 (嵌入式) -->
-        <div class="bg-white p-8 rounded-xl shadow-lg border border-gray-200">
-          <h3 class="text-xl font-bold text-blue-700 mb-4" data-zh="聯絡表單" data-en="Contact Form">聯絡表單</h3>
-          <p class="mb-4 text-gray-700" data-zh="請填寫以下表單，我們會盡快與您聯繫。" data-en="Please fill out the form below and we will get back to you as soon as possible.">請填寫以下表單，我們會盡快與您聯繫。</p>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyAvDjQh1Wk3QfNDP3e01zcfVZsZtZX76hAFzF63B1wlcLIA/viewform?embedded=true" width="640" height="853" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc2H_C9fQW3pW3uE94e8v_Q7g3fQ_H8i_8e8s/viewform?embedded=true" class="w-full h-[600px] rounded-lg" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
+          <div>
+            <strong class="block font-semibold text-lg text-blue-700" data-zh="聯絡電話" data-en="Phone">聯絡電話：</strong>
+            <p class="text-gray-700">0972-138-928</p>
+          </div>
+          <div>
+            <strong class="block font-semibold text-lg text-blue-700" data-zh="電子郵件" data-en="Email">電子郵件：</strong>
+            <p class="text-gray-700">antelopehw@outlook.com</p>
+          </div>
+          <div>
+            <strong class="block font-semibold text-lg text-blue-700" data-zh="官方 LINE" data-en="Official LINE">官方 LINE：</strong>
+            <p class="text-gray-700">@602dlrjj</p>
+            <a class="mt-4 inline-block bg-green-500 text-white font-bold py-2 px-6 rounded-lg hover:bg-green-600 transition duration-300" href="https://line.me/ti/p/@602dlrjj" target="_blank" data-zh="💬 加入我們的 LINE" data-en="💬 Join our LINE">💬 加入我們的 LINE</a>
+          </div>
+          <div class="md:col-span-2">
+            <strong class="block font-semibold text-lg text-blue-700" data-zh="公司地址" data-en="Address">公司地址：</strong>
+            <p class="text-gray-700" data-zh="臺中市清水區吳厝里和睦路三段250號1樓" data-en="1F, No. 250, Sec. 3, Hemu Rd., Wucuo Li, Qingshui Dist., Taichung City">臺中市清水區吳厝里和睦路三段250號1樓</p>
+          </div>
+          <div class="md:col-span-2">
+            <strong class="block font-semibold text-lg text-blue-700" data-zh="辦公時間" data-en="Office Hours">辦公時間：</strong>
+            <p class="text-gray-700" data-zh="週一至週五 09:00-17:00 (GMT+8)" data-en="Mon-Fri 09:00-17:00 (GMT+8)">週一至週五 09:00-17:00 (GMT+8)</p>
+          </div>
         </div>
       </div>
       
