--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12 mt-8">
         <!-- 左側輪播圖片 -->
         <div class="bg-white p-8 rounded-xl shadow-lg border border-gray-200">
-          <h3 class="text-xl font-bold text-blue-700 mb-4" data-zh="公司環境" data-en="Our Facilities">公司環境</h3>
+          <h3 class="text-xl font-bold text-blue-700 mb-4" data-zh=" " data-en="Our Facilities"> </h3>
           <div class="carousel-container rounded-lg shadow-md">
             <!-- 已經設定好的圖片 -->
             <img class="carousel-image active rounded-lg" src="https://raw.githubusercontent.com/SummerM12/mm/refs/heads/main/image_02.png" alt="公司環境圖片 1">
