--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12 mt-8">
         <!-- 左側輪播圖片 -->
         <div class="bg-white p-8 rounded-xl shadow-lg border border-gray-200">
-          <h3 class="text-xl font-bold text-blue-700 mb-4" data-zh=" " data-en="Our Facilities"> </h3>
+          <h3 class="text-xl font-bold text-blue-700 mb-4" data-zh="公司環境" data-en="Our Facilities">公司環境</h3>
           <div class="carousel-container rounded-lg shadow-md">
             <!-- 已經設定好的圖片 -->
             <img class="carousel-image active rounded-lg" src="https://raw.githubusercontent.com/SummerM12/mm/refs/heads/main/image_02.png" alt="公司環境圖片 1">
@@ -140,7 +140,8 @@
       <!-- 地圖區塊 -->
       <div class="mt-8 bg-white p-8 rounded-xl shadow-lg border border-gray-200">
         <h3 class="text-xl font-bold text-blue-700 mb-4" data-zh="公司位置" data-en="Our Location">公司位置</h3>
-        <iframe src="https://www.google.com/maps?q=24.274054,120.558659&hl=zh-TW&z=16&output=embed" class="w-full h-80 rounded-lg" allowfullscreen="" loading="lazy"></iframe>
+        <!-- 已修正為 Google 地圖嵌入專用網址 -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3637.2885973713025!2d120.55608447545199!3d24.2740542788506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34691456d9a1b1c7%3A0xf69b46e49221235b!2z5pS_5qiW5Y-46Zmi5Y-j6I-v5paH5L-h6KiI6KGM5Lit5b-D5bGx6IiJ5pys5o-B!5e0!3m2!1szh-TW!2stw!4v1700000000000!5m2!1szh-TW!2stw" class="w-full h-80 rounded-lg" allowfullscreen="" loading="lazy"></iframe>
       </div>
     </main>
 
