--- a/contact.html
+++ b/contact.html
@@ -97,8 +97,8 @@
         <div class="bg-white p-8 rounded-xl shadow-lg border border-gray-200">
           <div class="carousel-container rounded-lg shadow-md">
             <!-- 已經設定好的圖片 -->
-            <img class="carousel-image active rounded-lg" src="https://raw.githubusercontent.com/SummerM12/mm/refs/heads/main/image_02.png" alt="公司環境圖片 1">
-            <img class="carousel-image rounded-lg" src="https://raw.githubusercontent.com/SummerM12/mm/refs/heads/main/image_01.png" alt="公司環境圖片 2">
+            <img class="carousel-image active rounded-lg" src="https://raw.githubusercontent.com/SummerM12/mm/refs/heads/main/image_02.png" alt="遠洋船圖片 1">
+            <img class="carousel-image rounded-lg" src="https://raw.githubusercontent.com/SummerM12/mm/refs/heads/main/image_01.png" alt="遠洋船圖片 2">
             
             <!-- 在這裡增加您新的圖片 -->
           </div>
